# license-cli

./: Cargo.toml  README.md  add.go  get_license.go  go.mod  go.sum  help.go  links.json  main.go  setup_dir.go
LICENSE_LIST/: apache-2.0  bsd-2  bsd-3  gnu-agpl  gpl-2  gpl-3  isc  lgpl  mit
src/: cli.rs  downloader.rs  main.rs  matcher.rs  store.rs
