[package]
name = "license"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "license"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
chrono = "0.4"
colored = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
